--- a/web/src/assets/scss/utility/_u-utility.scss
+++ b/web/src/assets/scss/utility/_u-utility.scss
@@ -21,6 +21,22 @@
     }
   }
 
+  &-pcin {
+    display: inline;
+
+    @include sp {
+      display: none;
+    }
+  }
+
+  &-spin {
+    display: none;
+
+    @include sp {
+      display: inline;
+    }
+  }
+
   &-pc {
     display: block !important;
 
