--- a/web/web/assets/css/index.css
+++ b/web/web/assets/css/index.css
@@ -163,7 +163,8 @@ body {
   width: 100%;
   height: 100%;
   -webkit-text-size-adjust: 100%;
-  line-height: 1.6
+  line-height: 1.6;
+  letter-spacing: .07em
 }
 a {
   text-decoration: none;
@@ -349,22 +350,53 @@ blockquote:before {
   padding: 100px 0 10px;
   background-color: #433a44
 }
+@media screen and (max-width:750px) {
+  .footer {
+    padding: 13.33333vw 0 10px
+  }
+}
 .f-nav {
   display: table;
   margin: 0 auto 100px
 }
+@media screen and (max-width:750px) {
+  .f-nav {
+    margin: 0 auto 13.33333vw
+  }
+}
 .f-ul {
   width: 300px;
   display: table-cell;
-  vertical-align: top;
-  border-left: 1px solid #fff
+  vertical-align: top
 }
-.f-ul:first-child {
-  border-left: none
+@media print,
+screen and (min-width:751px) {
+  .f-ul {
+    border-right: 1px solid #fff
+  }
+}
+@media screen and (max-width:750px) {
+  .f-ul {
+    display: block;
+    border-bottom: none
+  }
+}
+.f-ul:last-child {
+  border-right: none
+}
+@media screen and (max-width:750px) {
+  .f-ul:last-child {
+    border-bottom: none
+  }
 }
 .f-li {
   text-align: center;
-  margin-bottom: 10px
+  padding: 5px 0
+}
+@media screen and (max-width:750px) {
+  .f-li:last-child {
+    margin-bottom: 8vw
+  }
 }
 .f-li a {
   color: #c1c1c1
@@ -376,6 +408,11 @@ blockquote:before {
   font-size: 16px;
   color: #fff;
   margin-bottom: 20px
+}
+@media screen and (max-width:750px) {
+  .f-li--ttl {
+    margin-bottom: 2.66667vw
+  }
 }
 .f-li--left {
   text-align: left
@@ -402,6 +439,22 @@ blockquote:before {
 @media screen and (max-width:750px) {
   .u-spi {
     display: inline-block
+  }
+}
+.u-pcin {
+  display: inline
+}
+@media screen and (max-width:750px) {
+  .u-pcin {
+    display: none
+  }
+}
+.u-spin {
+  display: none
+}
+@media screen and (max-width:750px) {
+  .u-spin {
+    display: inline
   }
 }
 .u-pc {
