--- a/web/src/assets/scss/coding/c-page.scss
+++ b/web/src/assets/scss/coding/c-page.scss
@@ -142,6 +142,13 @@ body {
     margin-bottom: 100px;
     box-sizing: content-box;
 
+    // for PC whose height is less than 650
+    @media screen and (min-width:750px) and(max-height:650px) {
+      max-width: 800px;
+      width: 100%;
+      height: 500px;
+    }
+
     @include sp {
       // width: 700/750*100vw;
       // height: 1000/750*100vw;
@@ -319,6 +326,10 @@ body {
     transform-origin: bottom;
     transform: scaleY(1);
     background: linear-gradient(transparent 0%, #065a67 70%, #433A44);
+
+    @include pc {
+      margin-bottom: -5px;
+    }
   }
 
 
