--- a/web/web/assets/css/coding/c-page.css
+++ b/web/web/assets/css/coding/c-page.css
@@ -611,6 +611,13 @@ screen and (min-width:751px) {
   -webkit-box-sizing: content-box;
   box-sizing: content-box
 }
+@media screen and (min-width:750px) and (max-height:650px) {
+  .c-page .cont {
+    max-width: 800px;
+    width: 100%;
+    height: 500px
+  }
+}
 @media screen and (max-width:750px) {
   .c-page .cont {
     width: 96vw;
@@ -791,6 +798,12 @@ screen and (min-width:751px) {
   background: -webkit-gradient(linear,left top,left bottom,from(transparent),color-stop(70%,#065a67),to(#433a44));
   background: -o-linear-gradient(transparent 0,#065a67 70%,#433a44);
   background: linear-gradient(transparent 0,#065a67 70%,#433a44)
+}
+@media print,
+screen and (min-width:751px) {
+  .c-page .nz {
+    margin-bottom: -5px
+  }
 }
 .c-page .js-current {
   opacity: 1
