--- a/web/web/assets/css/coding/prism.css
+++ b/web/web/assets/css/coding/prism.css
@@ -222,6 +222,12 @@ pre[class*="language-"]:after {
   color: #e0d7d1;
 }
 
+@media screen and (max-width:750px) {
+  .line-numbers-rows {
+    display: none;
+  }
+}
+
 /* Plugin styles: Line Numbers */
 pre[class*="language-"].line-numbers.line-numbers {
   padding-left: 0;
@@ -365,7 +371,7 @@ pre[class*="language-"].line-numbers>code {
   display: block;
   counter-increment: linenumber;
   font-size: .9rem;
-  line-height: 1.7;
+  line-height: 1.66;
 }
 
 .line-numbers-rows>span:before {
