--- a/web/src/assets/scss/coding/c-page.scss
+++ b/web/src/assets/scss/coding/c-page.scss
@@ -257,7 +257,7 @@ body {
 
     &__cont {
       width: 800px;
-      padding: 100px 80px;
+      padding: 80px 60px 50px;
       background-color: #F7F8FC;
       border: #00F6FF solid 4px;
 
@@ -277,7 +277,7 @@ body {
       width: 100%;
       position: relative;
       font-size: 24px;
-      margin-bottom: 80px;
+      margin-bottom: 60px;
       color: rgb(70, 70, 70);
 
       @include sp {
@@ -308,7 +308,7 @@ body {
       text-align: justify;
 
       &:not(:last-child) {
-        margin-bottom: 50px;
+        margin-bottom: 30px;
 
         @include sp {
           margin-bottom: 60/750*100vw;
