--- a/web/src/coding/works/page26.ejs
+++ b/web/src/coding/works/page26.ejs
@@ -14,22 +14,29 @@
   <main class="c-page">
 
 
-    <page name="work3" tab="3">
+    <page name="work26" tab="3">
 
 
       <template slot="mainCont">
-        <!-- kvに入るhtmlを記述 -->
+        <div class="canvas-parent" id="p5Parent">
+        </div>
+        <div id="p5_loading"></div>
       </template>
 
 
 
       <template slot="html">
-        <!-- ソースとしてhtmlを記述 -->
+        &lt;div class="canvas-parent" id="canvasParent"&gt;
+        &lt;/div&gt;
       </template>
 
 
       <template slot="css">
-        <!-- ソースとしてcssを記述 -->
+        .canvas-parent {
+        width: 100%;
+        height: 100%;
+        cursor: pointer;
+        }
       </template>
 
 
@@ -44,7 +51,11 @@
 
 <!-- css manipulation ----------------------------------------- -->
 <style type="text/css">
-  /* kvのhtmlをスタイリングするcssを記述 */
+  .canvas-parent {
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+  }
 
 </style>
 
